<resources>
    <string name="app_name">WidgetSample</string>
    <string name="connect">Connect</string>
    <string name="log_out">Logout</string>
    <string name="voice_call">Voice</string>
    <string name="video_call">Video</string>
    <string name="to">To</string>
    <string name="access_token">Access token</string>
    <string name="start">Start</string>
    <string name="from">From</string>
    <string name="incoming_call_access">Incoming call access</string>
    <string name="allow_notifications">Allow notifications</string>
    <string name="allow_full_screen_calls">Allow full-screen calls</string>
    <string name="incoming_access_state">Notifications: %1$s\nFull-screen calls: %2$s</string>
    <string name="granted">granted</string>
    <string name="not_granted">not granted</string>
    <string name="stringee_brand">STRINGEE</string>
    <string name="hero_title">Stringee Call Sample</string>
    <string name="hero_description">Connect once, then start clear voice and video calls.</string>
    <string name="connect_title">Connect to Stringee</string>
    <string name="connect_description">Paste an access token generated by your trusted server.</string>
    <string name="call_title">Start a new call</string>
    <string name="call_description">Enter the Stringee user ID you want to reach.</string>
    <string name="call_type">Call type</string>
</resources>
