<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:animateLayoutChanges="true"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <data>

        <import type="android.view.View" />

        <import type="com.stringee.widgetsample.R" />

        <import type="com.stringee.widgetsample.MainViewModel.MainState" />

        <import type="com.stringee.widgetsample.MainActivity" />

        <variable
            name="MainViewModel"
            type="com.stringee.widgetsample.MainViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/purple_500">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:paddingHorizontal="10dp"
                android:singleLine="true"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_connect_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:minHeight="50dp"
                android:text="@{MainViewModel.connectStatus}"
                android:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:hint="@string/access_token"
                android:orientation="horizontal"
                android:visibility="@{MainViewModel.mainState == MainState.NOT_CONNECTED? View.VISIBLE : View.GONE}">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:text="@={MainViewModel.accessToken}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:hint="@string/from"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:text="@={MainViewModel.from}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:hint="@string/to"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:text="@={MainViewModel.to}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@{MainViewModel.mainState != MainState.CONNECTED? R.string.connect : R.string.log_out}" />

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:justifyContent="space_evenly">

                <Button
                    android:id="@+id/btn_voice_call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/voice_call" />

                <Button
                    android:id="@+id/btn_video_call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/video_call" />
            </com.google.android.flexbox.FlexboxLayout>

        </LinearLayout>
    </LinearLayout>
</layout>